[feat] ch05 part1